k8s/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: go-web-app-deployment

  labels:
    app: go-web-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: go-web-app

  template:
    metadata:
      labels:
        app: go-web-app

    spec:
      containers:

        - name: go-web-app-container

          image: krishna2915/go-web-app:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:

            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "250m"

          livenessProbe:

            httpGet:
              path: /
              port: 8080

            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:

            httpGet:
              path: /
              port: 8080

            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
