k8s/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: go-web-app-ingress

spec:
  rules:

    - host: go-web-app.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: go-web-app-service

                port:
                  number: 80
